--- a/css/styles.css
+++ b/css/styles.css
@@ -16,11 +16,16 @@ img {
 }
 
 hr {
-  margin-top: 1mm;
-  color: #0F4C75;
-  background-color: #0F4C75;
+  margin-top: 5mm;
+  margin-bottom: 4mm;
+  margin-left: 0mm;
+  color: #3282B8;
+  background-color: #3282B8;
   border: none;
-  height: 2px;
+  height: 0.7mm;
+  width: 50%;
+  text-align: left;
+  border-radius: 2%;
 }
 
 ul {
@@ -33,13 +38,21 @@ li {
 }
 
 .header {
-  text-align: center;
+  text-align: left;
   background-color: #3282B8;
+  color: white;
   height: 50mm;
-  margin-bottom: 10mm;
   font-size: 16pt;
   font-family: Arial, Helvetica, sans-serif;
-  padding-left: 70mm;
+  padding-left: 90mm;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  background-color: #3282B8;
+  height: 10mm;
+  width: 100%;
 }
 
 .titolo {
@@ -47,21 +60,23 @@ li {
   margin-left: 2mm;
   text-align: left;
   font-size: 22pt;
-  color: #0F4C75;
+  color: #3282B8;
   font-family: Arial, Helvetica, sans-serif;
 }
 
 .sottotitolo {
-  font-weight: bold;
-  color: #3282B8;
+  color: #1B262C;
+  text-align: left;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 15pt;
+  font-size: 18pt;
+  margin-bottom: 3mm;
+  margin-top: 0;
 }
 
 .testo {
-  color: rgb(115, 115, 115);
-  text-align: justify;
-  font-size: 15pt;
+  color: #1B262C;
+  text-align: left;
+  font-size: 16pt;
   font-family: Arial, Helvetica, sans-serif;
   margin-top: 0;
   margin-bottom: 0;
@@ -82,19 +97,20 @@ li {
 .colomn {
   float: left;
   background-color: white;
-  margin-left: 10mm;
+  margin-left: 5mm;
   margin-right: 0mm;
 }
 
 .left {
-  width: 28%;
-  margin-top: 10mm;
+  width: 33%;
+  margin-top: 30mm;
 }
 
 .right {
-  width: 50%;
+  width: 53%;
+  margin-top: 5mm;
 }
 
 .center {
-  width: 6%;
+  width: 5%;
 }
