--- a/css/styles.css
+++ b/css/styles.css
@@ -1,118 +1,121 @@
 body {
-  margin: 0;
-  text-align: center;
-  font-family: 'Merriweather', serif;
-  width: 210mm;
-  height: 297mm;
-  max-width: 210mm;
-  margin: auto;
+    font-family: 'Roboto', sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f9f9f9;
+    color: #333;
+    line-height: 1.6;
 }
 
-img {
-  position: relative;
-  border-radius: 50%;
-  left: -60mm;
-  top: -35mm;
-  width: 220px;
-  height: auto;
+.container {
+    max-width: 900px;
+    margin: 0px auto;
+    padding: 20px;
+    background: #fff;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
 }
 
-hr {
-  margin-top: 5mm;
-  margin-bottom: 4mm;
-  margin-left: 0mm;
-  color: #3282B8;
-  background-color: #3282B8;
-  border: none;
-  height: 0.7mm;
-  width: 50%;
-  text-align: left;
-  border-radius: 2%;
+header {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+header h1 {
+    margin: 0;
+    font-size: 2.5em;
+    color: #333;
+}
+
+header p {
+    margin: 5px 0;
+    color: #666;
+}
+
+section {
+    margin-bottom: 40px;
+}
+
+section h2 {
+    border-bottom: 2px solid #333;
+    padding-bottom: 10px;
+    margin-bottom: 20px;
+    font-size: 1.8em;
+    color: #333;
+}
+
+.job, .education {
+    margin-bottom: 20px;
+}
+
+.job h3, .education h3 {
+    margin: 0;
+    font-size: 1.5em;
+    color: #333;
+}
+
+.job h4, .education h4 {
+    margin: 5px 0;
+    font-size: 1.1em;
+    color: #777;
+}
+
+.job h5, .education h5 {
+    margin: 0;
+    font-size: 1em;
+    color: #aaa;
 }
 
 ul {
-  margin: 2mm;
-  margin-left: 0;
+    list-style-type: none;
+    padding-left: 0;
 }
 
-li {
-  margin-bottom: 3mm;
+ul li {
+    margin-bottom: 10px;
+    padding-left: 20px;
+    position: relative;
 }
 
-.header {
-  text-align: left;
-  background-color: #3282B8;
-  color: white;
-  height: 50mm;
-  font-size: 16pt;
-  font-family: Arial, Helvetica, sans-serif;
-  padding-left: 90mm;
+ul li::before {
+    content: '\2022';
+    position: absolute;
+    left: 0;
+    color: #333;
+    font-weight: bold;
 }
 
-.footer {
-  position: fixed;
-  bottom: 0;
-  background-color: #3282B8;
-  height: 10mm;
-  width: 210mm;
+a {
+    color: #007acc;
+    text-decoration: none;
 }
 
-.titolo {
-  margin-bottom: 0;
-  margin-left: 2mm;
-  text-align: left;
-  font-size: 22pt;
-  color: #3282B8;
-  font-family: Arial, Helvetica, sans-serif;
+a:hover {
+    text-decoration: underline;
 }
 
-.sottotitolo {
-  color: #1B262C;
-  text-align: left;
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 18pt;
-  margin-bottom: 3mm;
-  margin-top: 0;
-}
+@media (max-width: 600px) {
+    .container {
+        padding: 10px;
+    }
 
-.testo {
-  color: #1B262C;
-  text-align: left;
-  font-size: 16pt;
-  font-family: Arial, Helvetica, sans-serif;
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 3mm;
-}
+    header h1 {
+        font-size: 2em;
+    }
 
-.testo-bullet {
-  color: rgb(115, 115, 115);
-  text-align: justify;
-  font-size: 14pt;
-  font-family: Arial, Helvetica, sans-serif;
-}
+    section h2 {
+        font-size: 1.5em;
+    }
 
-.row {
-  background-color: #BBE1FA;
-}
+    .job h3, .education h3 {
+        font-size: 1.2em;
+    }
 
-.colomn {
-  float: left;
-  background-color: white;
-  margin-left: 5mm;
-  margin-right: 0mm;
-}
+    .job h4, .education h4 {
+        font-size: 1em;
+    }
 
-.left {
-  width: 33%;
-  margin-top: -30mm;
-}
-
-.right {
-  width: 53%;
-  margin-top: -40mm;
-}
-
-.center {
-  width: 5%;
+    .job h5, .education h5 {
+        font-size: 0.9em;
+    }
 }
